2000-10-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* unif.c (scm_make_uve, scm_dimensions_to_uniform_array):  Don't
	allow vectors longer than SCM_LENGTH_MAX. This removes the
	SCM_HUGE_LENGTH trick, i. e. storing a vector length greater than
	SCM_LENGTH_MAX at the beginning of the vector's memory.  Since not
	all of guile's code was implemented to be aware of this trick, it
	is unlikely that it was used anyway.  We can implement such a
	feature more cleanly by using double cells for uniform vector
	types.

	(scm_shap2ra):  Replace SCM_IMP and SCM_NIMP tests by more
	straightforward predicates.

	(scm_dimensions_to_uniform_array):  Require that for dimensions
	given as lower-bound/upper-bound pairs the upper-bound is never
	less than the lower bound.

2000-10-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* dynl.c (scm_dynamic_link, scm_dynamic_func, scm_dynamic_call,
	scm_dynamic_args_call), filesys.c (scm_chown, scm_chmod,
	scm_open_fdes, scm_stat, scm_link, scm_rename, scm_delete_file,
	scm_mkdir, scm_rmdir, scm_opendir, scm_chdir, scm_symlink,
	scm_readlink, scm_lstat, scm_copy_file), fports.c (scm_open_file),
	ioext.c (scm_read_delimited_x, scm_fdopen), load.c
	(scm_primitive_load, scm_parse_path, scm_search_path,
	scm_sys_search_load_path, scm_primitive_load_path), net_db.c
	(scm_inet_aton, scm_gethost, scm_getnet, scm_getproto,
	scm_getserv), numbers.c (scm_string_to_number), ports.c
	(scm_truncate_file, scm_sys_make_void_port), posix.c
	(scm_getpwuid, scm_getgrgid, scm_execl, scm_execlp,
	environ_list_to_c, scm_execle, scm_utime, scm_access,
	scm_setlocale, scm_mknod), regex-posix.c (scm_make_regexp),
	simpos.c (scm_system, scm_getenv), socket.c (scm_fill_sockaddr,
	scm_send, scm_sendto), stime.c (scm_strftime, scm_strptime),
	strop.c (scm_i_index, scm_string_null_p, scm_string_to_list),
	strports.c (scm_mkstrport), symbols.c
	(scm_string_to_obarray_symbol), vports.c (scm_make_soft_port):
	Don't accept symbols as input parameters.  Use SCM_STRING_LENGTH